Added routing and a few other items.

--- a/views/_partial/_footer.ejs
+++ b/views/_partial/_footer.ejs
@@ -1,6 +1,6 @@
 <footer>
     <div class='footer-container'>
-    <h1>Hello! this is the footer!</h1>
+    <h1>This is the footer.</h1>
     </div>
 </footer>
 </body>
