--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -1,5 +1,5 @@
 <%- include ("../_partial/_header.ejs") -%>
 
-<h1>Hello! this is the body and index!</h1>
+<h1>Herro.</h1>
 
 <%- include ("../_partial/_footer.ejs") -%>
