Testing Front End

--- a/views/_partial/_header.ejs
+++ b/views/_partial/_header.ejs
@@ -11,13 +11,13 @@
 <body>
 <header>
   <nav class='navbar navbar-dark bg-dark navbar-static-top' role="navigation">
-    <div class="container">
-      <a class="navbar-brand" href="/">Consortium</a>
+      <a class="navbar-brand margin-left-1em" href="/">Consortium</a>
       <ul class="nav navbar-right">
         <li><a href="/home" class="btn btn-dark">Home</a></li>
         <li><a href="/about" class="btn btn-dark">About</a></li>
+        <li><a href="/contact" class="btn btn-dark">Contact</a></li>
+        <li><a href="/support" class="btn btn-dark">Support</a></li>
         <li><a href="/login" class="btn btn-dark">Log In</a></li>
       </ul>
-    </div>
   </nav>
 </header>
