--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,3 +1,11 @@
 .margin-left-1em{
     margin-left: 1em;
 }
+
+.margin-left-2em{
+    margin-left: 2em;
+}
+
+.margin-left-3em{
+    margin-left: 3em;
+}
