--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -1,5 +1,13 @@
 <%- include ("../_partial/_header.ejs") -%>
-
-<h1>Hello! this is the body and the home page!</h1>
-
+<div class="container-fluid">
+    <div class="row">
+        <div class="col">
+            <h1 class="margin-left-2em">EVERYBODY WANTS TO BUILD A DREAM.<br>LET US HELP YOU BUILD IT.</h1>
+        </div>
+        <div class="col">
+            <h1>Test</h1>
+        </div>
+        </div>
+    </div>
+</div>
 <%- include ("../_partial/_footer.ejs") -%>
