Added new styles. Structured more. Added new ejs view.

--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -1,12 +1,18 @@
 <%- include ("../_partial/_header.ejs") -%>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col">
-            <h1 class="margin-left-2em">EVERYBODY WANTS TO BUILD A DREAM.<br>LET US HELP YOU BUILD IT.</h1>
-        </div>
-        <div class="col">
-            <h1>Test</h1>
-        </div>
+<div class="container-fluid landing">
+    <div class="container-fluid landing-background">
+        <div class="container-fluid landing-content">
+            <div class="row">
+                <div class="col margin-left-2em">
+                    <h1>EVERYBODY WANTS TO BUILD A DREAM.<br>LET US HELP YOU BUILD IT.</h1>
+                    <br>
+                    <a href="/whoareyou"><input type="button" value="WHO ARE YOU?" class="btn btn-coa"/></a>
+                </div>
+                <div class="col">
+                    <h1>Test</h1>
+                </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
