--- a/views/_partial/_footer.ejs
+++ b/views/_partial/_footer.ejs
@@ -1,7 +1,5 @@
 <footer>
-    <div class='footer-container'>
-    <h1>This is the footer.</h1>
-    </div>
+    <h1>This is a footer</h1>
 </footer>
 </body>
 </html>
