Added new files, fixed a few things. Fixed Footer. Added dashboard web route area.

--- a/views/_partial/_footer.ejs
+++ b/views/_partial/_footer.ejs
@@ -1,5 +1,14 @@
 <footer>
-    <h1>This is a footer</h1>
+    <div class="container-fluid">
+        <div class="margin-left-2em">
+            <br>
+            <a href="/about" class="btn btn-dark">About Us</a>
+            <br>
+            <a href="/contact" class="btn btn-dark">Contact Us</a>
+            <br>
+            <a href="/Support" class="btn btn-dark">Support</a>
+        </div>
+    </div>
 </footer>
 </body>
 </html>
