--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -6,7 +6,7 @@
                 <div class="col margin-left-2em">
                     <h1>EVERYBODY WANTS TO BUILD A DREAM.<br>LET US HELP YOU BUILD IT.</h1>
                     <br>
-                    <a href="/whoareyou"><input type="button" value="WHO ARE YOU?" class="btn btn-coa"/></a>
+                    <a href="/whoareyou" class="btn btn-coa btn-lg btn-danger">WHO ARE YOU?</a>
                 </div>
                 <div class="col">
                     <h1>Test</h1>
