--- a/views/_partial/_header.ejs
+++ b/views/_partial/_header.ejs
@@ -13,10 +13,7 @@
   <nav class='navbar navbar-dark bg-dark navbar-static-top' role="navigation">
       <a class="navbar-brand margin-left-1em" href="/">Consortium</a>
       <ul class="nav navbar-right">
-        <li><a href="/home" class="btn btn-dark">Home</a></li>
-        <li><a href="/about" class="btn btn-dark">About</a></li>
-        <li><a href="/contact" class="btn btn-dark">Contact</a></li>
-        <li><a href="/support" class="btn btn-dark">Support</a></li>
+        <li><a href="/features" class="btn btn-dark">Features</a></li>
         <li><a href="/login" class="btn btn-dark">Log In</a></li>
       </ul>
   </nav>
