--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -12,7 +12,7 @@
 
 .landing{
     min-height:100vh;
-    background-image: url("https://w.wallhaven.cc/full/mp/wallhaven-mpg83k.jpg");
+    background-image: url("https://w.wallhaven.cc/full/r7/wallhaven-r77g97.png");
     background-size: cover;
     background-color:black;
     padding: 0px !important;
@@ -29,6 +29,31 @@
 
 .landing-content{
     padding-top:35vh;
+    background-color: transparent;
+    background-blend-mode: lighten;
+    color:white;
+}
+
+.container-zeroed{
+    min-height:100vh;
+    background-image: url("https://w.wallhaven.cc/full/r7/wallhaven-r77g97.png");
+    background-size: cover;
+    background-color:black;
+    padding: 0px !important;
+    margin: 0px !important;
+}
+
+.container-zeroed-background{
+    background-color: rgba(0, 0, 0, .4);
+    min-height:100vh;
+    min-width:100vh;
+    width:100%;
+    margin:0px !important;
+    padding:0px !important;
+}
+
+.container-zeroed-content{
+    margin:auto;
     background-color: transparent;
     background-blend-mode: lighten;
     color:white;
