--- a/views/home/whoareyou.ejs
+++ b/views/home/whoareyou.ejs
@@ -1,15 +1,23 @@
 <%- include ("../_partial/_header.ejs") -%>
-<div class="container-fluid landing">
-    <div class="row">
-        <div class="col">
-            <h1 class="margin-left-2em">EVERYBODY WANTS TO BUILD A DREAM.<br>LET US HELP YOU BUILD IT.</h1>
-            <br>
-            <a href="/whoareyou"><input type="button" value="WHO ARE YOU?" class="btn btn-default"></a>
-        </div>
-        <div class="col">
-            <h1>Test</h1>
-        </div>
+
+<div class="container-fluid container-zeroed">
+    <div class="container-fluid container-zeroed-background">
+        <div class="container-fluid container-zeroed-content">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col">
+                        This is a test.
+                    </div>
+                    <div class="col">
+                        This is a test.
+                    </div>
+                    <div class="col">
+                        This is a test.
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+
 <%- include ("../_partial/_footer.ejs") -%>
