--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -10,6 +10,10 @@
     margin-left: 3em;
 }
 
+.hvh-975{
+    height: 97.5vh !important;
+}
+
 .landing{
     min-height:100vh;
     background-image: url("https://w.wallhaven.cc/full/r7/wallhaven-r77g97.png");
@@ -35,7 +39,7 @@
 }
 
 .container-zeroed{
-    min-height:100vh;
+    min-height:97.5vh;
     background-image: url("https://w.wallhaven.cc/full/r7/wallhaven-r77g97.png");
     background-size: cover;
     background-color:black;
@@ -45,7 +49,7 @@
 
 .container-zeroed-background{
     background-color: rgba(0, 0, 0, .4);
-    min-height:100vh;
+    min-height:97.5vh;
     min-width:100vh;
     width:100%;
     margin:0px !important;
@@ -72,4 +76,8 @@ footer{
     background-color: #D37272 !important;
     border-color: #E25D5D !important;
     font-weight:bolder !important;
+}
+
+.btn-fw{
+    width:200px;
 }
