--- a/views/home/whoareyou.ejs
+++ b/views/home/whoareyou.ejs
@@ -2,18 +2,23 @@
 
 <div class="container-fluid container-zeroed">
     <div class="container-fluid container-zeroed-background">
-        <div class="container-fluid container-zeroed-content hvh-975 d-flex align-items-center justify-content-around" style="background: yellow;">
-            <div class="flex-item d-flex flex-column align-items-center" style="background: purple;">
-                <img class="mb-4" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/1200px-Image_created_with_a_mobile_phone.png" width="500px" height="500px" >
-                <a href="/whoareyou/worldbuilder" class="btn btn-coa btn-lg btn-danger btn-fw">WRITER</a>
+        <div class="container-fluid container-zeroed-content hvh-975 d-flex flex-column align-items-center justify-content-center" style="background: #2c2f31;">
+            <div class="flex-item mb-5">
+                <h1>WHO ARE YOU?</h1>
             </div>
-            <div class="flex-item d-flex flex-column align-items-center" style="background: blue;">
-                <img class="mb-4" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/1200px-Image_created_with_a_mobile_phone.png" width="500px" height="500px" >
-                <a href="/whoareyou/worldbuilder" class="btn btn-coa btn-lg btn-danger btn-fw">WORLD BUILDER</a>
-            </div>
-            <div class="flex-item d-flex flex-column align-items-center" style="background: green;">
-                <img class="mb-4" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/1200px-Image_created_with_a_mobile_phone.png" width="500px" height="500px" >
-                <a href="/whoareyou/roleplayer" class="btn btn-coa btn-lg btn-danger btn-fw">ROLEPLAYER</a>
+            <div class="container-fluid d-flex align-items-center justify-content-around">
+                <div class="flex-item d-flex flex-column align-items-center">
+                    <img class="mb-5" src="assets/images/writer.jpg" width="500px" height="500px">
+                    <a href="/whoareyou/worldbuilder" class="btn btn-coa btn-lg btn-danger btn-fw">WRITER</a>
+                </div>
+                <div class="flex-item d-flex flex-column align-items-center">
+                    <img class="mb-5" src="assets/images/worldbuilder.jpg" width="500px" height="500px" >
+                    <a href="/whoareyou/worldbuilder" class="btn btn-coa btn-lg btn-danger btn-fw">WORLD BUILDER</a>
+                </div>
+                <div class="flex-item d-flex flex-column align-items-center">
+                    <img class="mb-5" src="assets/images/roleplayer.jpg" width="500px" height="500px" >
+                    <a href="/whoareyou/roleplayer" class="btn btn-coa btn-lg btn-danger btn-fw">ROLEPLAYER</a>
+                </div>
             </div>
         </div>
     </div>
