Fixed whoareyou background color and spacing.

--- a/views/home/whoareyou.ejs
+++ b/views/home/whoareyou.ejs
@@ -1,8 +1,8 @@
 <%- include ("../_partial/_header.ejs") -%>
 
 <div class="container-fluid container-zeroed">
-    <div class="container-fluid container-zeroed-background">
-        <div class="container-fluid container-zeroed-content hvh-975 d-flex flex-column align-items-center justify-content-center" style="background: #2c2f31;">
+    <div class="container-fluid container-zeroed-background bg-darkgrey">
+        <div class="container-fluid container-zeroed-content hvh-80 d-flex flex-column align-items-center justify-content-center">
             <div class="flex-item mb-5">
                 <h1>WHO ARE YOU?</h1>
             </div>
