--- a/views/home/login.ejs
+++ b/views/home/login.ejs
@@ -1,29 +1,27 @@
 <%- include('../_partial/_header'); -%>
  
-<div class="col-md-8">
-    <div class="panel panel-default">
- 
-        <div class="panel-heading">
-            <h3>Log In</h3>
-        </div>
-        <div class="panel-body">
-            <form class="form-signin" method="POST" action="/login">
-                <div class="input-group">
-                    <span class="input-group-addon" id="basic-addon1">@</span>
-                    <input type="text" class="form-control" placeholder="Email" name="email" aria-describedby="basic-addon1">
-                </div>
-                <br />
-                <div class="input-group">
-                    <span class="input-group-addon" id="basic-addon1"><span class="glyphicon glyphicon-lock"
-                            aria-hidden="true"></span></span>
-                    <input type="password" class="form-control" placeholder="Password" name="password" aria-describedby="basic-addon1">
-                </div>
- 
-                <input type="submit" class="btn btn-default navbar-btn" value="Sign In" />
- 
-            </form>
+<div class="container-fluid container-zeroed">
+    <div class="container-fluid container-zeroed-background bg-darkgrey">
+        <div class="container-fluid container-zeroed-content hvh-80 d-flex flex-column align-items-center justify-content-center">
+            <div class="flex-item p-4 bg-offwhite" id="login">
+                <form href="#" type="submit" method="POST">
+                    <input type="username" class="form-control bg-darkgrey" id="username" placeholder="Username">
+                    <br>
+                    <input type="password" class="form-control bg-darkgrey" id="password" placeholder="Password">
+                    <br>
+                    <button type="submit" class="btn btn-dark col-12">Log In</button>
+                    <br>
+                    <div class="d-flex justify-content-between">
+                        <div>Remember Me</div>
+                        <div>Need help?</div>
+                    </div>
+                </form>
+            </div>
+            <div class="mt-2">
+                <a href="#" class="badge">Create an Account</a> | <a href="#" class="badge">Forgot Password</a>
+            </div>
         </div>
     </div>
 </div>
- 
+
 <%- include('../_partial/_footer'); -%>
