--- a/views/home/about.ejs
+++ b/views/home/about.ejs
@@ -1,5 +1,15 @@
 <%- include ("../_partial/_header.ejs") -%>
 
-<h1>Hello! this is the body and the about page!</h1>
+<div class="container-fluid container-zeroed">
+    <div class="container-fluid container-zeroed-background bg-darkgrey">
+        <div class="container-fluid container-zeroed-content hvh-80 d-flex flex-column align-items-center justify-content-center">
+            <div class="flex-item d-flex flex-column justify-content-center align-items-center">
+                <h1>About Us - Placeholder</h1>
+                <br>
+                <h2>Oops! Looks like this page isn't ready! Come back another time!</h2>
+            </div>
+        </div>
+    </div>
+</div>
 
 <%- include ("../_partial/_footer.ejs") -%>
