--- a/views/home/features.ejs
+++ b/views/home/features.ejs
@@ -1,15 +1,15 @@
 <%- include ("../_partial/_header.ejs") -%>
-<div class="container-fluid landing">
-    <div class="row">
-        <div class="col">
-            <h1 class="margin-left-2em">EVERYBODY WANTS TO BUILD A DREAM.<br>LET US HELP YOU BUILD IT.</h1>
-            <br>
-            <a href="/whoareyou"><input type="button" value="WHO ARE YOU?" class="btn btn-default"></a>
-        </div>
-        <div class="col">
-            <h1>Test</h1>
-        </div>
+
+<div class="container-fluid container-zeroed">
+    <div class="container-fluid container-zeroed-background bg-darkgrey">
+        <div class="container-fluid container-zeroed-content hvh-80 d-flex flex-column align-items-center justify-content-center">
+            <div class="flex-item d-flex flex-column justify-content-center align-items-center">
+                <h1>Features - Placeholder</h1>
+                <br>
+                <h2>Oops! Looks like this page isn't ready! Come back another time!</h2>
+            </div>
         </div>
     </div>
 </div>
+
 <%- include ("../_partial/_footer.ejs") -%>
