--- a/views/home/login.ejs
+++ b/views/home/login.ejs
@@ -5,9 +5,9 @@
         <div class="container-fluid container-zeroed-content hvh-80 d-flex flex-column align-items-center justify-content-center">
             <div class="flex-item p-4 bg-offwhite" id="login">
                 <form href="#" type="submit" method="POST">
-                    <input type="username" class="form-control bg-darkgrey" id="username" placeholder="Username">
+                    <input type="username" class="form-control bg-darkgrey text-white" id="username" placeholder="Username">
                     <br>
-                    <input type="password" class="form-control bg-darkgrey" id="password" placeholder="Password">
+                    <input type="password" class="form-control bg-darkgrey text-white" id="password" placeholder="Password">
                     <br>
                     <button type="submit" class="btn btn-dark col-12">Log In</button>
                     <br>
@@ -18,7 +18,7 @@
                 </form>
             </div>
             <div class="mt-2">
-                <a href="#" class="badge">Create an Account</a> | <a href="#" class="badge">Forgot Password</a>
+                <a href="/signup" class="badge">Create an Account</a> | <a href="#" class="badge">Forgot Password</a>
             </div>
         </div>
     </div>
