--- a/views/home/signup.ejs
+++ b/views/home/signup.ejs
@@ -1,44 +1,55 @@
 <%- include('../_partial/_header'); -%>
-<div class="col-md-8">
- 
-    <div class="panel panel-default">
- 
-        <div class="panel-heading">
-            <h3>Sign Up</h3>
-        </div>
-        <div class="panel-body">
-            <form class="form-signin" method="POST" action="/signup">
-                <div class="input-group">
-                    <span class="input-group-addon" id="basic-addon1">@</span>
-                    <input type="text" class="form-control" placeholder="Username" name="username" aria-describedby="basic-addon1">
+
+    <div class="container-fluid container-zeroed">
+        <div class="container-fluid container-zeroed-background bg-darkgrey">
+            <div
+                class="container-fluid container-zeroed-content hvh-80 d-flex flex-column align-items-center justify-content-center">
+                <div class="flex-item p-4 bg-offwhite" id="signup">
+                    <form method="post" id="SignUpForm">
+                        <input type="email" class="form-control bg-darkgrey text-white" name="email"
+                            placeholder="Email">
+                        <br>
+                        <input type="text" class="form-control bg-darkgrey text-white" name="username"
+                            placeholder="Username">
+                        <br>
+                        <input type="password" class="form-control bg-darkgrey text-white" name="password"
+                            placeholder="Password">
+                        <br>
+                        <input type="password" class="form-control bg-darkgrey text-white" name="retypePassword"
+                            placeholder="Retype Password">
+                        <br>
+                        <button type="submit" class="btn btn-dark col-12">Sign Up</button>
+                    </form>
                 </div>
-                <br />
-                <div class="input-group">
-                    <span class="input-group-addon" id="basic-addon1">@</span>
-                    <input type="email" class="form-control" placeholder="Email address" name="email"
-                        aria-describedby="basic-addon1">
-                </div>
-                <br />
-                <div class="input-group">
-                    <span class="input-group-addon" id="basic-addon1"><span class="glyphicon glyphicon-lock"
-                            aria-hidden="true"></span></span>
-                    <input type="password" name="password" class="form-control" placeholder="Password" aria-describedby="basic-addon1">
-                </div>
-                <br />
-                <div class="input-group">
-                    <span class="input-group-addon" id="basic-addon1"><span class="glyphicon glyphicon-lock"
-                            aria-hidden="true"></span></span>
-                    <input type="password" class="form-control" placeholder="Re-password"
-                        aria-describedby="basic-addon1" name="repassword">
-                </div>
- 
-                <input type="submit" class="btn btn-default navbar-btn" value="Sign Up" />
- 
-            </form>
+            </div>
         </div>
     </div>
-</div>
- 
- 
- 
-<%- include('../_partial/_footer'); -%>
+
+    <script>
+        const myForm = document.getElementById('SignUpForm');
+
+        myForm.addEventListener('submit', function (e) {
+            e.preventDefault();
+
+            const { Client } = require('pg');
+
+            const client = new Client({
+                connectionString: process.env.DATABASE_URL,
+                ssl: {
+                    rejectUnauthorized: false
+                }
+            });
+
+            client.connect();
+
+            client.query('SELECT table_schema,table_name FROM information_schema.tables;', (err, res) => {
+                if (err) throw err;
+                for (let row of res.rows) {
+                    console.log(JSON.stringify(row));
+                }
+                client.end();
+            });
+        })
+    </script>
+
+    <%- include('../_partial/_footer'); -%>
