--- a/views/home/login.ejs
+++ b/views/home/login.ejs
@@ -4,10 +4,13 @@
     <div class="container-fluid container-zeroed-background bg-darkgrey">
         <div class="container-fluid container-zeroed-content hvh-80 d-flex flex-column align-items-center justify-content-center">
             <div class="flex-item p-4 bg-offwhite" id="login">
+
+                <%- include('../_component/_error.ejs'); %>
+
                 <form href="#" type="submit" method="POST">
-                    <input type="username" class="form-control bg-darkgrey text-white" id="username" placeholder="Username">
+                    <input type="username" class="form-control bg-darkgrey text-white" name="username" placeholder="Username" required>
                     <br>
-                    <input type="password" class="form-control bg-darkgrey text-white" id="password" placeholder="Password">
+                    <input type="password" class="form-control bg-darkgrey text-white" name="password" placeholder="Password" required>
                     <br>
                     <button type="submit" class="btn btn-dark col-12">Log In</button>
                     <br>
