--- a/views/home/signup.ejs
+++ b/views/home/signup.ejs
@@ -5,22 +5,27 @@
             <div
                 class="container-fluid container-zeroed-content hvh-80 d-flex flex-column align-items-center justify-content-center">
                 <div class="flex-item p-4 bg-offwhite" id="signup">
-                    <form method="post" action="/signup" id="signUpForm">
-                        <input type="email" class="form-control bg-darkgrey text-white" name="email" placeholder="Email" required>
+
+                    <%- include('../_component/_error.ejs'); %>
+
+                    <form method="post" id="signUpForm">
+                        <input type="email" class="form-control bg-darkgrey text-white" name="email"
+                            placeholder="Email">
                         <br>
-                        <input type="text" class="form-control bg-darkgrey text-white" name="username" placeholder="Username" required>
+                        <input type="text" class="form-control bg-darkgrey text-white" name="username"
+                            placeholder="User name" required>
                         <br>
-                        <input type="password" class="form-control bg-darkgrey text-white" name="password" placeholder="Password" required>
+                        <input type="password" class="form-control bg-darkgrey text-white" name="password"
+                            placeholder="Password" required>
                         <br>
-                        <input type="password" class="form-control bg-darkgrey text-white" name="retypePassword" placeholder="Retype Password" required>
-                        <button type="submit" class="btn btn-dark col-12">Sign Up</button>
+                        <input type="password" class="form-control bg-darkgrey text-white" name="confirmPassword"
+                            placeholder="Confirm Password" autocomplete="new-password" required>
+                        <span name="error"></span>
+                        <button type="submit" class="btn btn-dark col-12 mt-3">Sign Up</button>
                     </form>
                 </div>
             </div>
         </div>
     </div>
-
-    <script>
-    </script>
 
     <%- include('../_partial/_footer'); -%>
