--- a/views/_partial/_dashheader.ejs
+++ b/views/_partial/_dashheader.ejs
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="/assets/css/bootstrap.min.css" rel="stylesheet">
-<link href="/assets/css/styles.css" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-<title>Consortium</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/assets/css/styles.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <title>Consortium</title>
 </head>
+
 <body>
-<header>
-  <nav class='navbar navbar-dark bg-dark navbar-static-top' role="navigation">
-      <a class="navbar-brand margin-left-1em" href="/">Dashboard</a>
-      <ul class="nav navbar-right">
-        <li><a href="/home" class="btn btn-dark">Home</a></li>
-        <li><a href="/about" class="btn btn-dark">About</a></li>
-        <li><a href="/contact" class="btn btn-dark">Contact</a></li>
-        <li><a href="/support" class="btn btn-dark">Support</a></li>
-        <li><a href="/login" class="btn btn-dark">Log In</a></li>
+  <header>
+    <nav class='navbar navbar-dark bg-dark navbar-static-top justify-content-between' role="navigation">
+      <ul class='nav'>
+        <a class="navbar-brand margin-left-1em" href="/dashboard">Dashboard</a>
+        <li><a href="#" class="nav-item btn btn-dark"> Story Arcs </a></li>
+        <li><a href="#" class="nav-item btn btn-dark"> Worlds </a></li>
+        <li><a href="#" class="nav-item btn btn-dark"> Characters </a></li>
       </ul>
-  </nav>
-</header>
+      <div class="navbar-nav ml-auto">
+        <a href="/logout" class="nav-item btn btn-dark ml-auto">Log Out</a>
+      </div>
+    </nav>
+  </header>
