--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -102,6 +102,18 @@ body {
 
 }
 
+.dashboard{
+    background-image: none;
+    background-color: #2c2f31;
+}
+
+.card-link {
+    color:white !important;
+    text-decoration: none;
+    height: 15rem;
+    width: 15rem;
+}
+
 footer{
     width: 100%;
     height: 200px;
@@ -129,4 +141,17 @@ footer{
 
 .error {
     color: #E03D3D;
+}
+
+.container-editor{
+    border-style: solid;
+    border-color: white;
+    height:80vh;
+    overflow-y: scroll;
+}
+
+#editorjs{
+    background-color:#212529;
+    height:80vh;
+    overflow-y: scroll;
 }
