--- a/views/_partial/_dashheader.ejs
+++ b/views/_partial/_dashheader.ejs
@@ -8,6 +8,7 @@
   <link href="/assets/css/styles.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sceditor@3/minified/themes/default.min.css" />
   <title>Consortium</title>
 </head>
 
@@ -16,12 +17,12 @@
     <nav class='navbar navbar-dark bg-dark navbar-static-top justify-content-between' role="navigation">
       <ul class='nav'>
         <a class="navbar-brand margin-left-1em" href="/dashboard">Dashboard</a>
-        <li><a href="#" class="nav-item btn btn-dark"> Story Arcs </a></li>
-        <li><a href="#" class="nav-item btn btn-dark"> Worlds </a></li>
-        <li><a href="#" class="nav-item btn btn-dark"> Characters </a></li>
+        <li><a href="/dashboard/storyarcs" class="nav-item btn btn-dark"> Story Arcs </a></li>
+        <li><a href="/dashboard/worlds" class="nav-item btn btn-dark"> Worlds </a></li>
+        <li><a href="/dashboard/characters" class="nav-item btn btn-dark"> Characters </a></li>
       </ul>
       <div class="navbar-nav ml-auto">
-        <a href="/logout" class="nav-item btn btn-dark ml-auto">Log Out</a>
+        <a href="/dashboard/logout" class="nav-item btn btn-dark ml-auto">Log Out</a>
       </div>
     </nav>
   </header>
