--- a/views/home/whoareyou.ejs
+++ b/views/home/whoareyou.ejs
@@ -9,7 +9,7 @@
             <div class="container-fluid d-flex align-items-center justify-content-around">
                 <div class="flex-item d-flex flex-column align-items-center">
                     <img class="mb-5" src="assets/images/writer.jpg" width="500px" height="500px">
-                    <a href="/whoareyou/worldbuilder" class="btn btn-coa btn-lg btn-danger btn-fw">WRITER</a>
+                    <a href="/whoareyou/writer" class="btn btn-coa btn-lg btn-danger btn-fw">WRITER</a>
                 </div>
                 <div class="flex-item d-flex flex-column align-items-center">
                     <img class="mb-5" src="assets/images/worldbuilder.jpg" width="500px" height="500px" >
